Backend fixes (#67)
* use sync instead of attach

* fix price rule

* change route

* fix typos

* fix typos in api docs
